third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/no-close-1.stderr
TOML parse error at line 1, column 8
  |
1 | [where will it end
  |        ^
invalid table header
expected `.`, `]`
